@@ -3,20 +3,20 @@ package com.patinaud.bataillepersistence.mapper;
 import com.patinaud.bataillemodel.dto.CellDTO;
 import com.patinaud.bataillemodel.dto.GridDTO;
 import com.patinaud.bataillepersistence.entity.Cell;
+import com.patinaud.bataillepersistence.entity.Player;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 public class GridMapper {
-
+    private GridMapper() {
+        throw new IllegalStateException("Utility class");
+    }
 
     public static GridDTO toDto(List<Cell> cells) {
 
         List<Cell> sortedCells = cells.stream()
                 .sorted(Comparator.comparing(Cell::getY).thenComparing(Cell::getX))
-                .collect(Collectors.toList());
+                .toList();
 
 
         List<CellDTO> lineCells = new ArrayList<>();
@@ -43,5 +43,12 @@ public class GridMapper {
         GridDTO grid = new GridDTO();
         grid.setCells(gridCells);
         return grid;
+    }
+
+
+    public static List<Cell> toCellsEntities(GridDTO grid, Player player) {
+
+        return grid.getCells().stream().flatMap(List::stream).map(cellDTO -> CellMapper.toEntity(cellDTO, player)).toList();
+
     }
 }
